--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dev_dependencies:
     sdk: flutter
   provider: ^4.3.3
   chewie: ^0.12.2
+#  chewie:
+#    path: ../chewie
+#    git:
+#      url: https://github.com/jinyus/chewie
   video_player: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
@@ -44,7 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/
+    - assets/thumbs/
     - assets/videos/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
