--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ytanim
-description: Flutter Youtube Clone with video minimizing .
+name: fluttertube
+description: Flutter Youtube Clone with video minimizing.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
